--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Dog API Example</title>
+    <title>Dog API 1</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="container">
-        <h1>Dog API: A Simple Example</h1>
+        <h1>Dog API 1: By Quantity</h1>
       
         <form>
           <input type="number" name="number" id="number" min="1" max="50" value="3" required>
